Fixed article images too big on mobile.

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -121,6 +121,10 @@ pre, code,
 
 		img {
 			max-width: 600px;
+
+			@include media-query($on-palm) {
+				width: 100%;
+			}
 		}
 	}
 }
